--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,109 +1,66 @@
 //Menu 
-
-.menu-btn{
+.menu-btn {
     position: absolute;
     right: 35px;
     top: 35px;
     z-index: 3;
     cursor: pointer;
     @include easeOut;
-
-    .btn-line{
-        width:28px;
+    .btn-line {
+        width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background:set-text-color($primary-color);
+        background: set-text-color($primary-color);
         @include easeOut;
-    }
-
-    // close menu
-    &.close{
+    } // close menu
+    &.close {
         transform: rotate(180deg);
-
-        .btn-line{
+        .btn-line {
             // line 1
-            &:nth-child(1){
-                transform: rotate(45deg) translate(5px,5px);
-            }
-
-            // line-2
-            &:nth-child(2){
+            &:nth-child(1) {
+                transform: rotate(45deg) translate(5px, 5px);
+            } // line-2
+            &:nth-child(2) {
                 opacity: 0;
-            }
-
-            // line-3
-            &:nth-child(3){
-                transform: rotate(-45deg) translate(7px,-6px);
+            } // line-3
+            &:nth-child(3) {
+                transform: rotate(-45deg) translate(7px, -6px);
             }
         }
     }
 }
 
 //main menu
-
-.menu{
+.menu {
     position: fixed;
     top: 0;
-    width: 100%;
+    right: 0;
+    width: 25%;
     opacity: 0.9;
     visibility: hidden;
-
-    &.show{
+    &.show {
         visibility: visible;
     }
-
-    &-branding, &-nav{
-        display: flex;
-        flex-flow: column wrap;
-        align-items: center;
-        justify-content: center;
-        float: left;
-        width: 50%;
-        height: 100vh;
-        overflow: hidden;
-    }
-
-    &-nav{
-        background: darken($primary-color,5);
+    &-nav {
+        padding-top: 30%;
+        background: darken($primary-color, 5);
         list-style: none;
-        transform: translate3d(0,-100%,0);
+        transform: translateX(100%);
+        width: 100%;
         @include easeOut;
-
-        &.show{
-            transform: translate3d(0,0,0);
+        height: -webkit-fill-available;
+        &.show {
+            transform: translateX(0);
         }
     }
-
-    &-branding{
-        background: $primary-color;
+    .nav-item {
+        transform: translate(100%,100%);
         @include easeOut;
-        transform: translate3d(0,100%,0);
-        @include easeOut;
-
-        &.show{
-            transform: translate3d(0,0,0);
-        }
-
-        .potfolio{
-            width: 250px;
-            height: 250px;
-            background: url(../img/portrait.jpg);
-            border-radius: 50%;
-            border:solid 3px $secondary-color;
-            background-size: cover;
-        }
+        &.show {
+            transform: translate(0,0);
+;        }
     }
-
-    .nav-item{
-        transform: translate3d(600px,0,0);
-        @include easeOut;
-
-        &.show{
-        transform: translate3d(0,0,0);
-        }
-    }
-
-    .nav-link{
+    .nav-link {
         display: inline-block;
         position: relative;
         font-size: 30px;
@@ -113,18 +70,12 @@
         color: set-text-color($primary-color);
         text-decoration: none;
         @include easeOut;
-
-        &:hover{
+        &:hover {
             color: $secondary-color;
         }
     }
-    .active{
-        color: $secondary-color; 
+    .active {
+        color: $secondary-color;
     }
 }
 
-@for $x from 1 through 4{
-    .nav-item:nth-child(#{$x}){
-        transition-delay: $x*0.1s;
-    }
-}
