--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,7 +3,7 @@
 $primary-color : #444;
 $secondary-color:#eece1a;
 $show-home-image:true;
-$home-image:url(../img/background.jpg);
+$home-image:url(../assets/img/background.jpg);
 $background-opacity:0.8;
 
 
