--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -267,7 +267,7 @@ main#id h1 {
 .about-info {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
+  grid-template-areas: 'bio bio bio' 'job1 job2 job3' 'job4 job5 job6';
   grid-template-columns: repeat(3, 1fr);
 }
 
@@ -312,7 +312,7 @@ main#id h1 {
 /* line 126, C:/Users/dhruvi.makvana/Pictures/project/portfolio/scss/main.scss */
 .about-info .job h3 {
   color: #eece1a;
-  display: inline-block;
+  display: block;
   margin-bottom: 5px;
 }
 
