--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,3 +79,4 @@ ul.menu-nav.show{transform:translate3d(0,0,0);font-size:24px}
 h2.lg-heading{font-size:4rem}
 }
 .pre-heading{font-size:1.5rem}
+.italic{font-style:italic;}
