--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,37 +1,16 @@
-.menu-btn{position:absolute;right:35px;top:35px;z-index:3;cursor:pointer;transition:all .3s ease-out}
-.menu-btn .btn-line{width:28px;height:3px;margin:0 0 5px 0;background:#fff;transition:all .3s ease-out}
-.menu-btn.close{transform:rotate(180deg)}
-.menu-btn.close .btn-line:nth-child(1){transform:rotate(45deg) translate(5px,5px)}
-.menu-btn.close .btn-line:nth-child(2){opacity:0}
-.menu-btn.close .btn-line:nth-child(3){transform:rotate(-45deg) translate(7px,-6px)}
-.menu{position:fixed;top:0;right:0;width:auto;opacity:.9;visibility:hidden}
-.menu.show{visibility:visible;height:100%}
-.menu-nav{background:#373737;list-style:none;transform:translate3d(0,-100%,0);width:100%;transition:all .3s ease-out;height:100%}
-.menu-nav.show{transform:translate3d(0,0,0);padding-top:4rem;padding-right:2rem}
-.menu .nav-item{transform:translate3d(600px,0,0);transition:all .3s ease-out}
-.menu .nav-item.show{transform:translate3d(0,0,0)}
-.menu .nav-link{display:inline-block;position:relative;font-size:30px;text-transform:uppercase;padding:1rem 0;font-weight:300;color:#fff;text-decoration:none;transition:all .3s ease-out}
-.menu .nav-link:hover{color:#eece1a}
-.menu .active{color:#eece1a}
-.nav-item:nth-child(1){transition-delay:.1s}
-.nav-item:nth-child(2){transition-delay:.2s}
-.nav-item:nth-child(3){transition-delay:.3s}
-.nav-item:nth-child(4){transition-delay:.4s}
-html{font-size:16px}
+html{font-size:16px;scroll-behavior: smooth;}
 *{box-sizing:border-box;margin:0}
 body{color:#fff;height:100%;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;line-height:1.5;background:rgba(68,68,68,.8)}
 body#bg-image{background:url(../img/background.jpg);background-attachment:fixed;background-size:cover}
-body#bg-image::after{content:'';position:absolute;top:0;right:0;width:100%;height:-webkit-fill-available;background:rgba(68,68,68,.8);z-index:-1}
+body#bg-image::after{content:'';position:absolute;top:0;right:0;width:100%;z-index:-1}
 h1,h2,h3{font-weight:400}
 h1.lg-heading,h2.lg-heading,h3.lg-heading{font-size:calc(1rem + 5vw);color:#fff}
 h1.lg-heading:hover,h2.lg-heading:hover,h3.lg-heading:hover{font-size:6.1rem;transition:all .3s ease-out;font-weight:500;cursor:pointer}
 h1.sm-heading,h2.sm-heading,h3.sm-heading{margin-bottom:2rem;padding:.2rem 1rem;background:rgba(73,73,73,.5)}
 h3.sm-description{background-color:transparent}
 a{color:#fff;text-decoration:none}
-header{position:fixed;z-index:2;width:100%}
-header .home-icon{position:absolute;right:40px;top:5rem;z-index:-2!important;width:28px!important;cursor:pointer}
 .secondary-text{color:#eece1a}
-main{padding:4rem;min-height:calc(100vh - 60px);text-align:center}
+main{padding:4rem;min-height:calc(100vh - 60px);text-align:center; background-color: rgba(68,68,68,.8);}
 main .icons{margin-top:1rem}
 main a{padding:.4rem;color:#fff}
 main a:hover{color:#eece1a;transition:all .3s ease-out}
@@ -67,16 +46,45 @@ main#id h1{margin-top:20vh}
 }
 @media screen and (max-width:768px){main{align-items:center;text-align:center}
 main .lg-heading{letter-spacing:-.04cm;line-height:1}
-ul.menu-nav{float:none;width:100vw;min-height:0}
+ul.menu-nav{float:right;width:max-content;min-height:0}
 ul.menu-nav.show{transform:translate3d(0,0,0);font-size:24px}
 .menu-nav{height:100%}
-.about-info{grid-template-areas:'bioimage' 'bio' 'job1' 'job2' 'job3';grid-template-columns:1fr}
+.about-info{grid-template-areas:'bio' 'job1' 'job2' 'job3' 'job4' 'job5' 'job6';grid-template-columns:1fr}
 .projects{grid-template-columns:repeat(2,1fr)}
 .sm-heading{margin-top:24px}
 }
 @media screen and (max-width:500px){main#home h1{margin-top:10vh}
-.projects{grid-template-columns:1fr}
-h2.lg-heading{font-size:4rem}
+    .projects{grid-template-columns:1fr}
+    h2.lg-heading{font-size:4rem}
+    .navbar a span { display: none}
+    .wrapper, .card-front, .card-back {
+      font-size: 12px;
+      width: 70vw;
+    }
+
 }
 .pre-heading{font-size:1.5rem}
 .italic{font-style:italic;}
+.navbar {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+  }
+  
+  .navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .navbar a:hover {
+    background: black;
+    color: #eece1a;
+  }
