--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,7 @@ main#id h1{margin-top:20vh}
 .about-info .job-1{grid-area:job1}
 .about-info .job-2{grid-area:job2}
 .about-info .job-3{grid-area:job3}
+.about-info .job-1 p, .about-info .job-2 p{text-align:left;line-height:1.15;}
 .projects{display:grid;grid-template-columns:repeat(3,1fr);grid-gap:.7rem}
 .projects img{width:100%;height:200px;border:3px #fff soild}
 .projects img:hover{opacity:.5;border-color:#eece1a;transition:all .3s ease-out}
